Therion 5.6.0 (in progress):

therion:
 * support for colour models: cmyk, rgb, grayscale (see the color-model layout
   option in the Thbook)
 * support for colour management (see the color-profile layout option)
 * support for linear and radial shading (colour gradients) in MetaPost
   (withlinearshading and withradialshading options)
 * reimplemented internal processing of patterns and transparent colors in
   MetaPost (incompatible changes: the drawing option 'withtransparentcolor',
   macro 'def_transparent_rgb' and predefined transparent colors tr_bg,
   tr_white, tr_black were removed; use the drawing option
   'withcolor <color> withtransparency <number>' instead)
 * reimplemented conversion of MetaPost output to PDF
 * support for double number system in MetaPost (this eliminates the current
   MetaPost limits; see the chapter Limitations in the Appendix of the Thbook)
 * tex-refs-registers <on/off> initialization file option added (see the
   chapters Initialization files and Limitations in the Appendix of the Thbook)
 * support for LuaTeX as an alternative to pdfTeX
 * support for relative paths in TeX (\inputrel, \savepath and \loadpicture) and
   in MetaPost (inputrel)
 * updated Serbian translation
 * bugs fixed:
   - ISO8859-2 literals in the source code caused clang warnings
   - removed unnecessary SOURCE_DATE_EPOCH in the thbook Makefile
   - fixed numerical instability in l_overhang_SKBB
   - swapped anastomosis & karren symbols
   - no station scrap continuation list [#333]
   - fixed arrows flipping [#245]
   - colour preview-above doesn't work [#90]
   - KML export fix [#84]
   - other minor fixes
 * included {fmt} library
 * updated shapelib

loch:
 * Tools->Selection - only displays selected surveys
 * bugs fixed:
   - missing title
   - autorotation issues

infrastructure:
 * support for CMake builds (thanks to Matěj Plch)
 * C++14 required

--------------------------------------------------------------------------------
